...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooseFridgeActivity">

    <ListView
        android:id="@+id/fridges_listview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:background="#C5B5B5"
...
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/fridges_listview"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/addButton"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="159dp"
        android:onClick="signoutButtonClicked"
        android:text="Sign out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridges_listview" />

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="35dp"
        android:onClick="scanButtonClicked"
...
