...
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSubmitClicked"
            android:text="  Submit  " />
    </LinearLayout>
...
