...

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/CHChangeUserAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="userAccessButton"
            android:text="Change user access" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
...
